fixnig bugs